--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "readme": "readme.md",
   "author": "frank.closset@gmail.com",
   "devDependencies": {
-    "express": "*",
     "browser-sync": "~2.11.1",
-	"fs-extra": "~0.30.0",
+    "express": "*",
+    "fs-extra": "~0.30.0",
     "gulp": "~3.9.1",
-	"gulp-debug": "~2.1.2",
-	"gulp-tslint": "~4.3.5",
-    "gulp-typescript": "~2.13.5",
+    "gulp-debug": "~2.1.2",
+    "gulp-tslint": "~4.3.5",
+    "gulp-typescript": "~3.1.6",
     "lodash": "~4.6.1",
     "run-sequence": "~1.1.5",
-	"tslint": "~3.10.2"
+    "tslint": "~3.10.2",
+    "typescript": "^2.2.1"
   },
   "repository": {
     "type": "git",
