--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
+  "scripts": {
+    "start": "gulp serve",
+    "build": "gulp"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/frnkclsst/d3charts.git"
