--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "tslint": "~3.10.2",
     "typescript": "^2.2.1"
   },
+  "scripts": {
+    "start": "gulp serve",
+    "build": "gulp"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/frnkclsst/d3charts.git"
