Use gulp-typescript for compiling typescript sources

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "author": "frank.closset@gmail.com",
   "description": "Chart library based on d3",
-  "main": "dist/js/lib.js",
+  "main": "dist/js/lib.bundle.js",
   "readme": "readme.md",
   "devDependencies": {
     "async": "^2.4.0",
@@ -13,9 +13,9 @@
     "gulp": "~3.9.1",
     "gulp-debug": "~2.1.2",
     "gulp-tslint": "~4.3.5",
+    "gulp-typescript": "^3.1.6",
     "lodash": "~4.6.1",
     "run-sequence": "~1.1.5",
-    "tsify": "^3.0.1",
     "tslint": "~3.10.2",
     "typescript": "^2.3.2",
     "vinyl-buffer": "^1.0.0",
