--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@sdl/d3charts",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "author": "frank.closset@gmail.com",
   "description": "Chart library based on d3",
-  "main": "dist/js/lib.bundle.js",
+  "main": "dist/js/Lib.js",
+  "typings": "dist/typings/Lib.d.ts",
   "readme": "readme.md",
   "devDependencies": {
     "async": "^2.4.0",
