--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@sdl/d3charts",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "author": "frank.closset@gmail.com",
-  "description": "Chart library based on d3",
+  "description": "Chart library based on d3 and written in Typescript",
   "main": "dist/js/Lib.js",
   "typings": "dist/typings/Lib.d.ts",
   "readme": "readme.md",
   "devDependencies": {
+    "@types/d3": "^3.5.38",
     "async": "^2.4.0",
     "browser-sync": "~2.11.1",
     "browserify": "^14.3.0",
@@ -30,5 +31,8 @@
     "type": "git",
     "url": "https://github.com/frnkclsst/d3charts.git"
   },
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "dependencies": {
+    "d3": "^3.5.17"
+  }
 }
