--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         "sourceMap": false,
         "allowUnreachableCode": false,
         "allowUnusedLabels": false,
-        //"noImplicitAny": true,
+        "noImplicitAny": true,
         //"noImplicitThis": true,
         "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": true,
